Fixes wrap line not visible with light themes & invisible matched characters in cmd palette from #11

--- a/styles/editor.less
+++ b/styles/editor.less
@@ -52,10 +52,10 @@ atom-text-editor, atom-text-editor::shadow {
         -webkit-box-shadow: -2px 0 10px 2px rgba(0,0,0,0.5);
     }
     .wrap-guide {
-        background-color: rgba(255,255,255,0.05);
+        background-color: fade(@text-color, 3%);
     }
     .indent-guide {
-        color: rgba(255,255,255,0.05);
+        color: fade(@text-color, 3%);
     }
 }
 .roboto-mono {
