--- a/styles/overlays.less
+++ b/styles/overlays.less
@@ -95,7 +95,7 @@ atom-panel.modal, .overlay {
                     color: @text-color;
 
                     &.character-match {
-                        .highlight(@text-color);
+                        color: @text-color;
                     }
                 }
                 &.two-lines {
